--- a/MilbridgeHoldings/appsettings.json
+++ b/MilbridgeHoldings/appsettings.json
@@ -8,5 +8,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+
+  "EmailService": {
+    "UserName": "test@test.co.zw",
+    "Password": "Password123",
+    "Host": "smtp.office365.com",
+    "Port": 587,
+    "Address": "test@test.co.zw",
+    "DisplayName": "Milbridge Holdings SA"
+  },
+
+    "AllowedHosts": "*"
+  }
